--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
   "ConnectionStrings": {
 
     "PlaceHolderConnection": "host=127.0.0.1;port=5432;database={dbName};user id=postgres;password=123",
-    "HostConnection": "host=127.0.0.1;port=5432;database={dbName};user id=postgres;password=123"
+    "HostConnection": "host=127.0.0.1;port=5432;database=host;user id=postgres;password=123"
   },
   "Logging": {
     "LogLevel": {
@@ -11,6 +11,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AuthSettings": {
+    "key": "Encryption Key For EDMS",
+    "Audience": "http://edms.com",
+    "Issuer": "http://edms.com"
   },
   "AllowedHosts": "*"
 }
